bynkc/tests/fixtures/negative/315_handler_arity_mismatch/src/probe.bynk
context probe

fn greet(name: String) -> String {
  name
}

service api from http {
  on GET("/ping") () -> Effect[HttpResult[String]] by v: Visitor {
    Ok(greet("a", "b"))
  }
}
